--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=Summarizer
 server.port=8001
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:file:./data/summarizer
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=hi
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
