Implemented thymeleaf features with spring security features

--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -15,3 +15,13 @@ spring.jpa.hibernate.ddl-auto=update
 #Create user account in twilio and add the below given credentials
 #twilio.sid= <Your sid>
 #twilio.auth.token= <Your token>
+
+spring.ai.ollama.base-url=http://localhost:11434/
+spring.ai.ollama.model=llama3
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=itsvyaas32@gmail.com
+spring.mail.password=koglgiuqdkmpgpci
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
