--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.ai.ollama.model=llama3
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=itsvyaas32@gmail.com
-spring.mail.password=koglgiuqdkmpgpci
+#spring.mail.username=yourEmail.com
+#spring.mail.password=passwordFrom  myAccounts.google.com/passwords(16 words without space)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
