Implemented Spring Security

--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -6,22 +6,11 @@ spring.h2.console.path=/h2-console
 
 spring.datasource.url=jdbc:h2:file:./data/summarizer
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=hi
+spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-#Create user account in twilio and add the below given credentials
-#twilio.sid= <Your sid>
-#twilio.auth.token= <Your token>
-
 spring.ai.ollama.base-url=http://localhost:11434/
 spring.ai.ollama.model=llama3
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-#spring.mail.username=yourEmail.com
-#spring.mail.password=passwordFrom  myAccounts.google.com/passwords(16 words without space)
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
