--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Summarizer
-server.port=8001
+server.port=${PORT:8001}
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
