--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=Summarizer
 server.port=${PORT:8001}
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
+
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.datasource.url=jdbc:h2:file:./data/summarizer
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
