--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Summarizer
 server.port=${PORT:8001}
+server.address=0.0.0.0
 
 spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
@@ -12,6 +13,3 @@ spring.datasource.driverClassName=org.h2.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-
-spring.ai.ollama.base-url=http://localhost:11434/
-spring.ai.ollama.model=llama3
