Implementation of User account creation/deletion

--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -2,14 +2,35 @@ spring.application.name=Summarizer
 server.port=${PORT:8001}
 server.address=0.0.0.0
 
-spring.h2.console.enabled=false
+# Database Configuration
+spring.datasource.username=${DB_USERNAME:sa}
+spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.url=${DATABASE_URL:jdbc:h2:file:./data/summarizer}
+spring.datasource.driverClassName=${DB_DRIVER:org.h2.Driver}
+
+# JPA Configuration
+spring.jpa.database-platform=${JPA_DIALECT:org.hibernate.dialect.H2Dialect}
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+spring.jpa.show-sql=${SHOW_SQL:false}
+
+# H2 Console (disabled in production)
+spring.h2.console.enabled=${H2_CONSOLE_ENABLED:false}
 spring.h2.console.path=/h2-console
 
-spring.datasource.username=sa
-spring.datasource.password=
+# Security Configuration
+spring.security.user.name=${ADMIN_USERNAME:admin}
+spring.security.user.password=${ADMIN_PASSWORD:admin}
 
-spring.datasource.url=jdbc:h2:file:./data/summarizer
-spring.datasource.driverClassName=org.h2.Driver
+# Logging Configuration
+logging.level.root=${LOG_LEVEL:INFO}
+logging.level.com.Summarizer=${APP_LOG_LEVEL:INFO}
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+# CORS Configuration for production
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://*.render.com,https://*.vercel.app,https://*.netlify.app,http://localhost:3000,http://localhost:8080}
+spring.web.cors.allowed-methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
+spring.web.cors.allowed-headers=${CORS_ALLOWED_HEADERS:*}
+
+# Twilio Configuration
+twilio.account.sid=${TWILIO_ACCOUNT_SID:}
+twilio.auth.token=${TWILIO_AUTH_TOKEN:}
+twilio.phone.number=${TWILIO_PHONE_NUMBER:}
