--- a/Backend-Summarizer/src/main/resources/application.properties
+++ b/Backend-Summarizer/src/main/resources/application.properties
@@ -2,35 +2,14 @@ spring.application.name=Summarizer
 server.port=${PORT:8001}
 server.address=0.0.0.0
 
-# Database Configuration
-spring.datasource.username=${DB_USERNAME:sa}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.url=${DATABASE_URL:jdbc:h2:file:./data/summarizer}
-spring.datasource.driverClassName=${DB_DRIVER:org.h2.Driver}
-
-# JPA Configuration
-spring.jpa.database-platform=${JPA_DIALECT:org.hibernate.dialect.H2Dialect}
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
-spring.jpa.show-sql=${SHOW_SQL:false}
-
-# H2 Console (disabled in production)
-spring.h2.console.enabled=${H2_CONSOLE_ENABLED:false}
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
 
-# Security Configuration
-spring.security.user.name=${ADMIN_USERNAME:admin}
-spring.security.user.password=${ADMIN_PASSWORD:admin}
+spring.datasource.username=sa
+spring.datasource.password=
 
-# Logging Configuration
-logging.level.root=${LOG_LEVEL:INFO}
-logging.level.com.Summarizer=${APP_LOG_LEVEL:INFO}
+spring.datasource.url=jdbc:h2:file:./data/summarizer
+spring.datasource.driverClassName=org.h2.Driver
 
-# CORS Configuration for production
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://*.render.com,https://*.vercel.app,https://*.netlify.app,http://localhost:3000,http://localhost:8080}
-spring.web.cors.allowed-methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
-spring.web.cors.allowed-headers=${CORS_ALLOWED_HEADERS:*}
-
-# Twilio Configuration
-twilio.account.sid=${TWILIO_ACCOUNT_SID:}
-twilio.auth.token=${TWILIO_AUTH_TOKEN:}
-twilio.phone.number=${TWILIO_PHONE_NUMBER:}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
